[gd_scene load_steps=13 format=3 uid="uid://bp8twsx7ghniq"]

[ext_resource type="Script" uid="uid://st65n1ll0g7j" path="res://UpgradeComponents/MayFly/may_fly.gd" id="1_1xsc2"]
[ext_resource type="Texture2D" uid="uid://by2c5f01tqefa" path="res://UpgradeComponents/MayFly/MayFly1.svg" id="2_vipjq"]
[ext_resource type="Texture2D" uid="uid://cqcwccfowm8og" path="res://UpgradeComponents/MayFly/MayFly2.svg" id="3_2s0vi"]

[sub_resource type="SpriteFrames" id="SpriteFrames_g2rtd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vipjq")
}, {
"duration": 1.0,
"texture": ExtResource("3_2s0vi")
}],
"loop": true,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_tnmja"]
radius = 32.0156

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vipjq"]
load_path = "res://.godot/imported/ParticleSprite.svg-577512088bf10b8f9cdcef051445ce05.ctex"

[sub_resource type="Curve" id="Curve_2s0vi"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.532172, 0.939201), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_g2rtd"]
offsets = PackedFloat32Array(0.31044, 1)
colors = PackedColorArray(0.52, 0.52, 0.52, 1, 1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_vipjq"]
resource_name = "zip_around_anim"
length = 3.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.686675, 1.11254, 1.59749, 2.01316, 2.48385, 2.85266, 3.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-18, 18), Vector2(8, 24), Vector2(34, -2), Vector2(36, -33), Vector2(8, -49), Vector2(-20, -34), Vector2(-38, -7), Vector2(-29, 24)]
}

[sub_resource type="Animation" id="Animation_2s0vi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-18, 18)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D/CPUParticles2D:amount")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D/CPUParticles2D:initial_velocity_min")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [42.14]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D/CPUParticles2D:initial_velocity_max")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [42.14]
}

[sub_resource type="Animation" id="Animation_g2rtd"]
resource_name = "collected_anim"
length = 1.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.3, 0.4, 0.55, 0.8, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1), Vector2(-1, 1), Vector2(1e-05, 1), Vector2(1, 1), Vector2(1e-05, 1), Vector2(-1, 1), Vector2(1e-05, 1), Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D/CPUParticles2D:amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D/CPUParticles2D:initial_velocity_min")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [109.56]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D/CPUParticles2D:initial_velocity_max")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [109.56]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g2rtd"]
_data = {
&"RESET": SubResource("Animation_2s0vi"),
&"collected_anim": SubResource("Animation_g2rtd"),
&"zip_around_anim": SubResource("Animation_vipjq")
}

[node name="MayFly" type="Node2D"]
z_index = 53
z_as_relative = false
script = ExtResource("1_1xsc2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-18, 18)
sprite_frames = SubResource("SpriteFrames_g2rtd")
autoplay = "default"
frame_progress = 0.665754

[node name="Area2D" type="Area2D" parent="AnimatedSprite2D"]
collision_layer = 0
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/Area2D"]
shape = SubResource("CircleShape2D_tnmja")

[node name="CPUParticles2D" type="CPUParticles2D" parent="AnimatedSprite2D"]
show_behind_parent = true
texture = SubResource("CompressedTexture2D_vipjq")
lifetime = 0.65
emission_shape = 1
emission_sphere_radius = 29.37
spread = 180.0
gravity = Vector2(-30, -30)
initial_velocity_min = 42.14
initial_velocity_max = 42.14
scale_amount_min = 0.2
scale_amount_curve = SubResource("Curve_2s0vi")
color = Color(0.97, 0.97, 0.97, 0.513726)
color_initial_ramp = SubResource("Gradient_g2rtd")

[node name="MayFlyAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_g2rtd")
}
autoplay = "zip_around_anim"

[connection signal="area_entered" from="AnimatedSprite2D/Area2D" to="." method="_on_area_2d_area_entered"]
